[package]
name = "aarch64-arch-helpers"
authors = ["Mikhail Lappo <miklelappo@gmail.com>"]
version = "0.1.0"
description = """
Helper functions to access aarch64 CPU registers
"""
license = "MIT"
repository = "https://github.com/miklelappo/aarch64-arch-helpers"
documentation = "https://docs.rs/aarch64-arch-helpers/||VERSION||"
readme = "README.md"
keywords = ["aarch64", "boot", "baremetal"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]

[features]
default = [ "cache_helpers", "mmu_helpers" ]
errata_a57_813419 = []
cache_helpers = []
mmu_helpers = []

# ensure the required features of the crate are active for the doc.rs build
[package.metadata.docs.rs]
targets = ["aarch64-unknown-none", "aarch64-unknown-linux-gnu"]
